--- a/Thanks.html
+++ b/Thanks.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <meta name="description"content="Thanks page">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Thankyoupage</title>
+
         <link rel="icon" href="images/sorasak-KxCJXXGsv9I-unsplash.jpg">
 
         <link rel="stylesheet" href="style.css">
@@ -10,10 +13,17 @@
 
 <body>
 
+    
+<header>
 <h1>Successful</h1>
+</header>
+
+<main>
+    <article id="style1">
 <p>It is my honor and pleasure to confirm my admission to this program. Thank you so much for considering my application so thoroughly and being a source of support and advice throughout the process. I appreciate your support with the additional requirements for the program. I consider myself lucky that I had your assistance in navigating the processes of application submission and interviews.
     I am excited to begin my studies with the psychology department. I know that I can expect to learn a lot from you, the other professors, and my fellow students. <br> <strong> <span class="c1">Thank You</span></strong></p>
-
+    </article>
+</main>
 </body>
 
 </html>
