--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="These are my html learnings">
     <title>roopesh</title>
     <link rel="icon" href="md_5b269bc47c304.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="styleindex.css">
+    
 
 </head>
 
